# starter_vulkan

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  setup.sh
assets/shaders/: PBR.glsl  fs_PBR.glsl  fs_default.glsl  fs_sprite.glsl  fs_terrain.glsl  global.shared  light_debug.glsl  pbr.glsl  postfx.glsl  shadow_caster.glsl  sprite.glsl  vs_PBR.glsl  vs_default.glsl  vs_sprite.glsl  vs_terrain.glsl
engine/: CMakeLists.txt
engine/src/: assets.h  common.h  event.h  game_interface.h  input.h  main.c  platform.h  renderer.h  scene.h
engine/src/assets/: asset_types.h  assets.c  importer.c  importer.h  json_parser.c  json_parser.h  material_source.c  material_source.h  mesh_source.c  mesh_source.h
engine/src/core/: arena.c  arena.h  astring.c  astring.h  cmath.c  cmath.h  darray.h  debug.h  hash_table.h  hash_trie.c  hash_trie.h  identifiers.c  identifiers.h  lexer.c  lexer.h  logger.c  logger.h  pool.c  pool.h  r_types.h  slist.c  slist.h  strings.c  strings.h
engine/src/events/: event.c  platform_events.h
engine/src/input/: input.c  input_types.h
engine/src/platform/: filesystem.c  filesystem.h  wl_platform.c  wl_platform.h  x11_platform.c
engine/src/renderer/: r_internal.h  renderer.c
engine/src/renderer/backend/: vulkan_api.h
engine/src/renderer/backend/vulkan/: vk_buffer.c  vk_descriptor.c  vk_device.c  vk_image.c  vk_instance.c  vk_internal.h  vk_memory.c  vk_pass.c  vk_renderer.c  vk_resource.c  vk_shader.c  vk_surface.c  vk_swapchain.c  vk_sync.c  vk_texture.c  vk_utils.c
engine/src/scene/: camera.c
game/: CMakeLists.txt
game/assets/: asset_manifest.json
game/assets/models/: barrel.glb  crate.glb  walls_door.glb
game/assets/models/custom/: room.glb
game/assets/models/kenney/modular_dungeon/: room-large_fixed.glb
game/assets/pokemon/data/export/: hospital.json  objects.json  world.json  world_Terrain Top.csv  world_Terrain.csv  world_tileset.json
game/assets/pokemon/data/maps/: arena.tmj  fire.tmj  hospital.tmj  hospital2.tmj  house.tmj  plant.tmj  water.tmj  world.tmj
game/assets/pokemon/data/tilesets/: Grass.tsj  indoor.tsj  objects.tsj  world.tsj
game/assets/scenes/: rock.prefab  selection_entity.prefab
game/assets/shaders/: billboard.glsl  blit.glsl  dynamic.glsl  flat.glsl  global.shared  light_debug.glsl  line.glsl  pbr.glsl  phong.glsl  picker.glsl  postfx.glsl  procedural.glsl  shadow_caster.glsl  skybox.glsl  static.glsl  terrain.glsl  unlit.glsl  vertex.shared
game/assets/shaders/fragment/: composite.fragment  flat.fragment  phong.fragment  picker.fragment  postfx.fragment  textured.fragment  unlit.fragment  vertex_color.fragment
game/assets/shaders/vertex/: base.vertex  basic.vertex  batch.vertex  line.vertex  quad.vertex  shadow.vertex
game/src/: commands.c  commands.h  components.h  ecs.c  ecs.h  game.c  mesh_source.c  mesh_source.h  ui.c  ui.h
src/: assets.h  common.h  event.h  input.c  input.h  main.c  platform.h  renderer.h  scene.h  vk_buffers.c  vk_commands.c  vk_descriptor.c  vk_descriptor_set.c  vk_device.c  vk_extensions.c  vk_framebuffer.c  vk_image.c  vk_instance.c  vk_physical_device.c  vk_pipline.c  vk_renderer.h  vk_renderpass.c  vk_surface.c  vk_swapchain.c  vk_sync.c  vk_texture.c
src/allocators/: arena.c  arena.h  pool.c  pool.h
src/assets/: asset_types.h  assets.c  importer.c  importer.h
src/core/: arena.c  arena.h  astring.c  astring.h  debug.h  event.h  hash_table.c  hash_table.h  hash_trie.c  hash_trie.h  identifiers.c  identifiers.h  input_types.h  logger.c  logger.h  memory.c  memory.h  pool.h  r_types.h  string_view.c  string_view.h
src/events/: event.c  input_events.h  platform_events.h
src/input/: input.c  input_types.h
src/platform/: filesystem.c  filesystem.h  internal.h  platform.c  platform_linux.c  win32_platform.c  win32_platform.h  wl_platform.c  wl_platform.h  x11_platform.c  x11_platform.h  xcb_platform.c  xcb_platform.h
src/renderer/: r_internal.h  renderer.c  renderer_types.h  rinternal.h  vk_renderer.h
src/renderer/backend/: vulkan_api.h
src/renderer/backend/vulkan/: vk_buffer.c  vk_command.c  vk_descriptor.c  vk_device.c  vk_image.c  vk_instance.c  vk_internal.h  vk_memory.c  vk_pass.c  vk_renderer.c  vk_resource.c  vk_shader.c  vk_surface.c  vk_swapchain.c  vk_sync.c  vk_texture.c
src/renderer/vulkan/: vk_buffers.c  vk_commands.c  vk_descriptor.c  vk_device.c  vk_extensions.c  vk_framebuffer.c  vk_image.c  vk_instance.c  vk_internal.h  vk_pipline.c  vk_renderer.c  vk_renderpass.c  vk_resource_pool.h  vk_surface.c  vk_swapchain.c  vk_sync.c  vk_texture.c  vk_types.h
tools/: CMakeLists.txt
